# rehoboam

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  thinking.md
src/: animation.rs  app.rs  color.rs  color_cycle.rs  effect.rs  layout.rs  lib.rs  main.rs  tui.rs  ui_effect.rs
src/modules/: github.rs  query.graphql
