[package]
name = "rehoboam"
version = "0.1.0"
authors = ["Van Antonietti <v.antonietti@icloud.com>"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ratatui = { version = "0.29.0", default-features = false }
ratzilla = "0.1.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tachyonfx = { version = "0.15.0", default-features = false, features = [
  "dsl",
  "web-time",
] }
wasm-bindgen = "0.2.100"
